# compileLua

./: 1.txt  2  README.md  a.out  test2.cpp
lua-5.4.7/: CMakeLists.txt
lua-5.4.7/lib/: lua.lib
